--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,1 +1,7 @@
+#
+# ReliaWare SDS platform
+# Copyright (c) 2025, ReliaWare
+#
+# SPDX-License-Identifier: BSD-3-Clause
+#
 project(reliaware-tools)
