--- a/services/CMakeLists.txt
+++ b/services/CMakeLists.txt
@@ -1,1 +1,11 @@
+#
+# ReliaWare SDS platform
+# Copyright (c) 2025, ReliaWare
+#
+# SPDX-License-Identifier: BSD-3-Clause
+#
 project(reliaware-services)
+
+add_subdirectory(network)
+add_subdirectory(registry)
+add_subdirectory(transport)
