Add network address classes

--- a/modules/network/CMakeLists.txt
+++ b/modules/network/CMakeLists.txt
@@ -7,6 +7,10 @@
 project(reliaware-modules-network)
 
 add_library(reliaware-network SHARED)
+
 target_include_directories(reliaware-network PUBLIC include)
+target_compile_options(reliaware-network PRIVATE
+    -pedantic -Wall -Wextra -Werror)
 target_sources(reliaware-network PRIVATE
+    src/address.cxx
     src/socket.cxx)
