Add service executables

--- a/services/network/CMakeLists.txt
+++ b/services/network/CMakeLists.txt
@@ -5,3 +5,7 @@
 # SPDX-License-Identifier: BSD-3-Clause
 #
 project(reliaware-services-network)
+
+add_executable(reliaware-network-service)
+target_sources(reliaware-network-service PRIVATE
+    src/main.cxx)
