--- a/services/registry/CMakeLists.txt
+++ b/services/registry/CMakeLists.txt
@@ -5,3 +5,7 @@
 # SPDX-License-Identifier: BSD-3-Clause
 #
 project(reliaware-services-registry)
+
+add_executable(reliaware-registry-service)
+target_sources(reliaware-registry-service PRIVATE
+    src/main.cxx)
