--- a/services/transport/CMakeLists.txt
+++ b/services/transport/CMakeLists.txt
@@ -5,3 +5,7 @@
 # SPDX-License-Identifier: BSD-3-Clause
 #
 project(reliaware-services-transport)
+
+add_executable(reliaware-transport-service)
+target_sources(reliaware-transport-service PRIVATE
+    src/main.cxx)
