Add networking class skeletons

--- a/modules/network/CMakeLists.txt
+++ b/modules/network/CMakeLists.txt
@@ -10,5 +10,8 @@ add_library(reliaware-network SHARED)
 
 target_include_directories(reliaware-network PUBLIC include)
 target_sources(reliaware-network PRIVATE
+    src/buffer.cxx
     src/address.cxx
-    src/socket.cxx)
+    src/socket.cxx
+    src/listener.cxx
+    src/connection.cxx)
