--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -7,5 +7,6 @@
 project(reliaware-modules)
 
 add_subdirectory(command)
+add_subdirectory(coordination)
 add_subdirectory(network)
 add_subdirectory(service)
