Revert "Add TDomain templates to socket classes"
This reverts commit 716d579cf1cf10280af78b19284bab52137aa121.

--- a/modules/network/CMakeLists.txt
+++ b/modules/network/CMakeLists.txt
@@ -11,6 +11,10 @@ add_library(reliaware-network SHARED)
 target_include_directories(reliaware-network PUBLIC include)
 target_sources(reliaware-network PRIVATE
     src/buffer.cxx
+    src/address.cxx
+    src/socket.cxx
+    src/listener.cxx
+    src/connection.cxx
     src/local_domain.cxx
     src/ipv4_domain.cxx
     src/ipv6_domain.cxx)
